GUI Highlighting working